--- a/style.css
+++ b/style.css
@@ -1,151 +1,154 @@
-:root
+/*=====================================================
+====================GENERAL============================
+=======================================================*/
+html
 {
-    --green-color: #53b56a;
-    --green-color-hover: #479b5b;
+    --green: #53b56a;
+    --green-hover: #479b5b;
+    --gray: #dedede
 }
 
 body
 {
-    background-color: white;
-    border: 0px;
-    padding: 0px;
-    margin: 0px;
+    font-family: 'Rubik', sans-serif;
+    margin: 0;
 }
 
 #allContainer
 {
-    float: center;
-    min-width: 500px;
-    max-width: 1300px;
-
-    border: 2px solid blue;
+    /*border: 1px solid red;*/
+    /*min-width: 700px;*/
+    max-width: 1500px;
+    height: max-content;
+    margin: auto;
+    display: flex;
 }
 
+/*=====================================================
+====================BARRA DE ARRIBA====================
+=======================================================*/
 nav
 {
-    background-color: var(--green-color);
-    color: white;
-    min-height: 2rem;
-    margin: 0.4rem 0.5rem 0 0.5rem;
-    border-radius: 10px;
-    line-height: 2rem;
-    padding: 0 0.7rem 0 0.7rem;
-    font-family: 'Rubik', sans-serif;
+    /*border: 1px solid red;*/
 
-    border: 2px solid red;
+    background-color: var(--green);
+    font-size: 1.5rem;
+    color: white;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border-radius: 10px;
+    vertical-align: middle;
+    line-height: 1.5rem;
 }
 
+#userData
+{
+    float: right;
+    font-size: 1.2rem;
+    vertical-align: middle;
+    line-height: 1.4rem;
+    color: white;
+    background-color: transparent;
+    border: 0;
+    border-radius: 10px;
+}
+
+#userData:hover
+{
+    background-color: var(--green-hover);
+}
+
+/*=====================================================
+=================BARRA DE LA IZQUIERDA=================
+=======================================================*/
 aside
 {
-    border: 2px solid red;
-
-    background-color: #dedede;
-    width: 17%;
-    height: calc(100vh - 4rem);
-    margin: 0.4rem 0 0 0.5rem;
-    float: left;
+    background-color: var(--gray);
+    max-width: 25%;
+    min-width: 150px;
+    height: max-content;
+    margin: 0.5rem;
+    padding: 0.5rem;
     border-radius: 10px;
-    font-family: 'Rubik', sans-serif;
-    padding: 0.4rem 0.7rem 0.4rem 0.7rem;
-
-    line-height: 2rem;
-    max-width: 200px;
 }
 
 #newNote
 {
     float: right;
-    border: none;
-    background-color: var(--green-color);
-    font-size: 1rem;
+    background-color: var(--green);
     color: white;
+    border: 0;
     border-radius: 10px;
-    padding: 0.4rem 0.7rem 0.4rem 0.7rem;
+    padding: 0.3rem;
+    width: 3ch;
 }
 
 #newNote:hover
 {
-    background-color: var(--green-color-hover);
+    background-color: var(--green-hover);
+}
+
+#notesList
+{
+    padding: 0.5rem 0;
 }
 
 .noteInTheList
 {
-    margin: 0.3rem 0 0 0;
+    padding: 0.3rem 0;
 }
 
 .noteListButton
 {
-    background-color: #dedede;
-    border: none;
-    border-radius: 10px;
-    text-align: left;
-    padding: 0.3rem 0 0.3rem 0.3rem;
     width: 100%;
-    height: 1.5rem;
+    background-color: transparent;
+    border: 0;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    text-align: left;
 }
 
-.noteListButton:hover
+.noteListButton:hover,
+.noteListButton:focus
 {
-    color: white;
-    background-color: var(--green-color);
+    background-color: var(--green);
 }
 
 .noteListText
 {
-    max-width: 80%;
-    text-overflow:ellipsis;
-    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
-    display: inline-block;
+    overflow: hidden;
+    line-height: 1.5rem;
 }
 
-.deleteIcon
-{
-    height: 1rem;
-    vertical-align: middle;
-    float: right;
-    padding: 0 0.3rem 0 0.3rem;
-}
-
-.deleteIcon:hover
-{
-    background-color: red;
-    border-radius: 10px;
-}
-
+/*=====================================================
+====================AREA DEL TEXTO=====================
+=======================================================*/
 article
 {
-    margin: 0;
-    padding: 0.4rem 0.7rem 0.4rem 0.7rem;
-    border: 0;
-    float: left;
-    width: 78%;
-    min-width: 455px;
-
-    border: 2px solid yellow;
+    /*border: 1px solid red;*/
+    width: 100%;
+    min-width: 250px;
 }
 
 #topBar
 {
-    width: 99%;
-    background-color: #dedede;
-    padding: 0 0.7rem 0 0.7rem;
-    line-height: 2rem;
-    font-family: 'Rubik', sans-serif;
-    border: none;
+    /*border: 1px solid blue;*/
+    background-color: var(--gray);
     border-radius: 10px;
+    padding: 0.5rem;
+    margin: 0.5rem;
 }
 
-#noteField
+textarea
 {
-    width: 100%;
-    height: 85%;
-    margin-top: 0.5rem;
-    padding: 0 0.7rem 0 0.7rem;
-    border: solid 2px;
+    min-height: 70vh;
+    height: 95%;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    border: 2px solid var(--green);
     border-radius: 10px;
     font-family: 'Rubik', sans-serif;
-    border-color: var(--green-color);
-    line-height: 1.5rem;
-    vertical-align: top;
 }
