--- a/style.css
+++ b/style.css
@@ -5,12 +5,13 @@ html
 {
     --green: #53b56a;
     --green-hover: #479b5b;
-    --gray: #dedede
+    --gray: #dedede;
+    --rubik: 'Rubik', sans-serif;
 }
 
 body
 {
-    font-family: 'Rubik', sans-serif;
+    font-family: var(--rubik);
     margin: 0;
 }
 
@@ -88,9 +89,66 @@ aside
     background-color: var(--green-hover);
 }
 
+#newNoteField
+{
+    text-align: center;
+}
+
+#newNoteFieldDiv
+{
+    background-color: var(--green);
+    margin: 1rem 0;
+    border-radius: 10px;
+    padding: 0.3rem;
+    color: white;
+    text-align: left;
+    text-align: center;
+}
+
+#newNoteFieldDiv input[type='text']
+{
+    width: 100%;
+    text-align: left;
+    margin: 0.3rem 0;
+    padding: 0.3rem;
+    font-family: var(--rubik);
+    border-radius: 10px;
+    border: 0;
+    text-align: center;
+}
+
+#newNoteField button
+{
+    display: inline-block;
+    background-color: var(--green);
+    font-family: var(--rubik);
+    color: white;
+    padding: 0.3rem;
+    border: 0;
+    border-radius: 10px;
+}
+
+#newNoteField button:hover
+{
+    background-color: var(--green-hover);
+}
+
+#newNoteAdvertise
+{
+    font-size: 0.8rem;
+    margin: 0.7rem;
+    display: inline-block;
+}
+
 #notesList
 {
     padding: 0.5rem 0;
+}
+
+#youDontHaveNotes
+{
+    padding: 2rem 0;
+    text-align: center;
 }
 
 .noteInTheList
@@ -109,10 +167,17 @@ aside
     text-align: left;
 }
 
+.noteSelected
+{
+    text-decoration: underline;
+}
+
 .noteListButton:hover,
-.noteListButton:focus
+.noteListButton:focus,
+.noteSelected
 {
     background-color: var(--green);
+    color: white;
 }
 
 .noteListText
@@ -126,6 +191,7 @@ aside
 /*=====================================================
 ====================AREA DEL TEXTO=====================
 =======================================================*/
+
 article
 {
     /*border: 1px solid red;*/
@@ -142,6 +208,43 @@ article
     margin: 0.5rem;
 }
 
+#leftToTheNoteNameButtons
+{
+    vertical-align: middle;
+    float: left;
+}
+
+#topBarButtons
+{
+    float: right;
+    vertical-align: middle;
+}
+
+#topBarButtons button, #leftToTheNoteNameButtons button
+{
+    display: inline-block;
+    background-color: transparent;
+    border: 0;
+    border-radius: 10px;
+    padding: 0 0.3rem;
+    margin: 0 0.3rem;
+}
+
+#topBarButtons img, #leftTotheNoteNameButtons img
+{
+    height: 1.3rem;
+}
+
+#topBarButtons .bg-green:hover, #leftToTheNoteNameButtons .bg-green:hover
+{
+    background-color: var(--green);
+}
+
+#topBarButtons .bg-red:hover
+{
+    background-color: rgb(255, 98, 98);
+}
+
 textarea
 {
     min-height: 70vh;
@@ -150,5 +253,33 @@ textarea
     margin: 0.5rem;
     border: 2px solid var(--green);
     border-radius: 10px;
-    font-family: 'Rubik', sans-serif;
+    font-family: var(--rubik);
+    font-size: 1rem;
+    resize: none;
+}
+
+textarea:disabled
+{
+    border-color: white;
+}
+
+textarea:focus
+{
+    outline-style: solid;
+    outline-offset: 2px;
+    outline-color: var(--green);
+}
+
+/*=====================================================
+====================ALGUNAS CLASES=====================
+=======================================================*/
+.red
+{
+    color: red;
+}
+
+.hidden
+{
+    /*Elementos con el display cambiado por algún motivo no se ocultan.*/
+    display: none;
 }
