--- a/frontend/css/leftBar.css
+++ b/frontend/css/leftBar.css
@@ -4,9 +4,9 @@
 aside
 {
     background-color: var(--gray);
-    width: 200px;
-    /*max-width: 20%;
-    min-width: 200px;*/
+    width: 15vw;
+    /*max-width: 20%;*/
+    min-width: 17ch;
     height: max-content;
     margin: 0.5rem;
     padding: 0.5rem;
@@ -21,7 +21,7 @@ aside
     border: 0;
     border-radius: 10px;
     padding: 0.3rem;
-    width: 3ch;
+    /*width: 3ch;*/
 }
 
 #newNote:hover
