--- a/frontend/css/floatingWindow.css
+++ b/frontend/css/floatingWindow.css
@@ -23,6 +23,7 @@
     top: 35%;
     left: 50%;
     transform: translate(-50%, -35%);
+
 }
 
 #menu
@@ -47,6 +48,49 @@
     height: auto;
     border: solid 3px var(--green);
     border-radius: 10px;
+}
+
+.open
+{
+    animation: openWindow 200ms linear 1;
+}
+
+@keyframes openWindow
+{
+    0%
+    {
+        opacity: 0;
+        transform: translate(-50%, -35%) rotateZ(15deg);
+    }
+    50%
+    {
+        opacity: 0.5;
+        transform: translate(-50%, -35%) rotateZ(-10deg);
+    }
+    100%
+    {
+        opacity: 1;
+        transform: translate(-50%, -35%) rotateZ(0deg);
+    }
+}
+
+.close
+{
+    animation: closeWindow 200ms linear 1;
+}
+
+@keyframes closeWindow
+{
+    0%
+    {
+        opacity: 1;
+        transform: translate(-50%, -35%) rotateZ(0deg);
+    }
+    100%
+    {
+        opacity: 0;
+        transform: translate(-50%, -35%) rotateZ(90deg);
+    }
 }
 
 #windowTitle,
