--- a/frontend/css/floatingWindow.css
+++ b/frontend/css/floatingWindow.css
@@ -58,43 +58,48 @@
 {
     0%
     {
+        transform: translate(-50%, -10%);
+        top: 10%;
         opacity: 0;
-        transform: translate(-50%, -35%) rotateZ(15deg);
     }
-    50%
+    70%
     {
-        opacity: 0.5;
-        transform: translate(-50%, -35%) rotateZ(-10deg);
+        transform: translate(-50%, -40%);
+        top: 40%;
+        opacity: 0.7;
     }
     100%
     {
+        transform: translate(-50%, -35%);
+        top: 35%;
         opacity: 1;
-        transform: translate(-50%, -35%) rotateZ(0deg);
     }
 }
 
 .closeWin
 {
-    animation: closeWindow 75ms linear 1;
+    animation: closeWindow 100ms linear 1;
 }
 
 @keyframes closeWindow
 {
     0%
     {
+        transform: translate(-50%, -35%);
+        top: 35%;
         opacity: 1;
-        transform: translate(-50%, -35%) rotateZ(0deg);
     }
     100%
     {
+        transform: translate(-50%, -10%);
+        top: 10%;
         opacity: 0;
-        transform: translate(-50%, -35%) rotateZ(15deg);
     }
 }
 
 .openBg
 {
-    animation: openBackground 75ms linear 1;
+    animation: openBackground 100ms linear 1;
 }
 
 @keyframes openBackground
@@ -111,7 +116,7 @@
 
 .closeBg
 {
-    animation: closeBackground 75ms linear 1;
+    animation: closeBackground 100ms linear 1;
 }
 
 @keyframes closeBackground
