--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -32,13 +32,15 @@ button:hover
     cursor: wait;
 }
 
-::-moz-selection
+textarea::-moz-selection,
+input::-moz-selection
 { /* Code for Firefox */
     color: white;
     background: var(--green);
 }
-  
-::selection
+
+textarea::selection,
+input::selection
 {
     color: white;
     background: var(--green);
