--- a/frontend/css/login.css
+++ b/frontend/css/login.css
@@ -48,7 +48,9 @@
     text-align: center;
     padding: 0.3rem;
     margin: 0.3rem;
+    color: var(--font-color);
     border: 2px solid var(--green);
+    background-color: var(--bg-color);
     border-radius: 10px;
 }
 
@@ -70,7 +72,7 @@
 .loginScreenButton2
 {
     background-color: var(--gray);
-    color: black;
+    color: var(--font-color);
 }
 
 .loginScreenButton1:hover,
