--- a/frontend/css/textArea.css
+++ b/frontend/css/textArea.css
@@ -86,6 +86,8 @@ textarea
     font-family: var(--rubik);
     font-size: 1rem;
     resize: none;
+    color: var(--font-color);
+    background-color: var(--bg-color);
     caret-color: var(--green-hover);
     transition: all ease 100ms;
 }
