colores del modo oscuro cambiados

--- a/frontend/css/style-dark.css
+++ b/frontend/css/style-dark.css
@@ -4,9 +4,9 @@
 
 html
 {
-    --green: #339B4A;
-    --green-hover: #1B8132;
-    --green-win-bg: rgba(27, 129, 50, 0.35);
+    --green: #07671C;
+    --green-hover: #055717;
+    --green-win-bg: rgba(5, 87, 23, 0.35);
     --bg-color: #000;
     --font-color: #EDEDED;
     --gray: #333333;
