la barra de la izquierda ya no hace overflow

--- a/frontend/css/leftBar.css
+++ b/frontend/css/leftBar.css
@@ -85,6 +85,9 @@ aside
 #notesList
 {
     padding: 0.5rem 0;
+    max-height: 80vh;
+    width: 100%;
+    overflow: scroll;
 }
 
 #youDontHaveNotes
