--- a/frontend/css/leftBar.css
+++ b/frontend/css/leftBar.css
@@ -31,57 +31,6 @@ aside
     transition: all ease 100ms;
 }
 
-#newNoteField
-{
-    text-align: center;
-}
-
-#newNoteFieldDiv
-{
-    background-color: var(--green);
-    margin: 1rem 0;
-    border-radius: 10px;
-    padding: 0.3rem;
-    color: white;
-    text-align: left;
-    text-align: center;
-}
-
-#newNoteFieldDiv input
-{
-    width: 100%;
-    text-align: left;
-    margin: 0.3rem 0;
-    padding: 0.3rem;
-    font-family: var(--rubik);
-    border-radius: 10px;
-    border: 0;
-    text-align: center;
-}
-
-#newNoteField button
-{
-    display: inline-block;
-    background-color: var(--green);
-    font-family: var(--rubik);
-    color: white;
-    padding: 0.3rem;
-    border: 0;
-    border-radius: 10px;
-}
-
-#newNoteField button:hover
-{
-    background-color: var(--green-hover);
-}
-
-#newNoteAdvertise
-{
-    font-size: 0.8rem;
-    margin: 0.7rem;
-    display: inline-block;
-}
-
 #notesList
 {
     padding: 0.5rem 0;
@@ -122,7 +71,7 @@ aside
 
 .noteSelected
 {
-    text-decoration: underline;
+    font-weight: 700;
 }
 
 .noteListButton:hover,
