--- a/frontend/css/leftBar.css
+++ b/frontend/css/leftBar.css
@@ -43,7 +43,7 @@ aside
     /*height: 90vh;*/
     height: 100%;
     width: 100%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 #youDontHaveNotes
